# yinka-utils

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  config.status  configure  configure.ac  libtool  yinkad.conf
data/: Makefile.am  yinka-updater.service  yinkad.conf
debian/: README.Debian  README.source  changelog  control  copyright  yinka-utils.install  yinkad.conf  yinkad.service
scripts/: Makefile.am  yinka-input.sh  yinka-network.sh  yinka-printer.sh  yinka-update.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/adsd/: CMakeLists.txt  daemon-ads.c
src/common/: daemon.c  daemon.h  initd.c  initd.h
src/system/: memstat.c  memstat.h  process.c  process.h
src/updater/: Makefile.am  updater.c  updater.h
src/utils/: Makefile.am  Makefile.in  config_read.c  config_read.h  md5.c  md5.h  mem_cpu_info.c  mem_cpu_info.h  process.c  process.h  process_info.c  process_info.h
src/utils/.deps/: config_read.Plo  mem_cpu_info.Plo  process.Plo
src/yinkad/: CMakeLists.txt  Makefile.am  Makefile.in  ads.c  daemon-yinka.c  yinka.c  yinkad  yinkad.c  yinkad.h
src/yinkad/.deps/: yinkad.Po
